Fixed layout issues on really small window.  Made menu stack and removed bottom gap between footer and edge of screen.

--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,4 +1,13 @@
+footer .container, footer ul {
+  padding: 0px;
+}
+
 footer li {
     display: inline;
-    padding: 5px;
+    padding: 0px 5px 5px 0px;
 }
+
+footer ul {
+  margin-bottom:0px;
+}
+
